hide overflow from body to prevent horizontal layout shift on store

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -9,5 +9,5 @@ $discord: #8094C8;
 
 $small: 540px;
 $medium: 940px;
-$big: 1200px;
+$big: 1248px;
 $biggest: 2000px;
