--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,7 +1,7 @@
 @import "variables";
-#main {
-	margin: 0;
-}
+// #main {
+// 	margin: 0;
+// }
 .index {
 	margin-right: auto;
 	margin-left: auto;
